# KM-collect

./: HID_over_I2C.md  HID_over_I2C_Detailed_Spec.md  index.md  log.md
01-AI/: LLM-Wiki-Pattern.md  UI自動化工具.md
01-AI/Claude-Code/: Claude-Code-15-Hidden-Features.md  agent-teams-management.md
01-AI/YouTuber-FormulaStar/: 07-16型美白法上.md  13-油肌護理.md  24-ESP32-MimicLaw.md
02-Hardware/ARM-Cortex-M4/: flash-programming-security.md
02-Hardware/HID-over-I2C/: Architecture_and_Overview.md
02-Hardware/I3C-USB-Bridge/: 02-Task-Tracking.md  05-AN5879-I3C-STM32H5-Tutorial.md  09-USB-Hotplug-Detection.md  14-ITM-SWO-Tutorial.md  16-USB-MSC-Development.md  HID-over-I3C-Speculation.md  MIPI-I3C-Basic-v1.2.md  WinDbg-commands.md  WinDbg-complete-guide.md
02-Hardware/M487/: 00_INDEX.md  01_SPEC.md  (+2 more)
02-Hardware/M487/UnitTest/GoogleTest/M487_HostTools/: CMakeLists.txt  test_msc_protocol.cpp
04-Tools/: WinDbgX使用指南.md  read_m487_flash.tcl
AI/: Claude-Complete-Guide.md
HID_over_I2C_Guides/: Introduction_to_HID_Over_I2C.md  Protocol_Specification.md
HP/: 03-HP-Stylus-UX-技術文件.md
I3C-USB-Bridge/: 01-I3C-Protocol-Research.md  03-Agent-Skill-Design-Patterns.md  AutoResearch.md  I3C-Hot-Join-Tutorial.md  MIPI-DisCo-for-I3C.md  Microsoft-HID-over-I2C-spec-full.md  Microsoft-HID-over-I2C.md
Obsidian示範/: 01-圖片連結格式範例.md  02-HID-Over-I2C-筆記.md
YouTuber-FormulaStar/: 01-頻道總覽.md  02-熟齡肌保養的謊言與真相.md  03-毛孔5種類型.md  05-PDRN市場亂象.md  05.en.vtt  06-寶拉珍選指南.md  08-抗老沒效果.md  09.en.vtt  10-去黃保養法.md  11-16型美白法下.md  14.en-US.vtt  15-毛孔答疑.md  16-首飾過敏.md  17-染髮膏選擇.md  18-痘痘閉口新成分.md  19-香水知識.md  19.zh-Hans.vtt  22-頻道指南.md  23-設計師ClaudeCode工作流.md
tasks/: Readme.md  TaskList.md  Task_Template.md  Verify_Template.md
(+60 files in other folders)
